[package]
name = "pos3ql"
version = "0.1.0"
edition = "2024"

# Dependency policy: std + libc only. libc provides raw syscall bindings
# (kqueue/epoll, sockets, low-level file I/O) that have no std equivalent.
# Everything else — PG wire protocol, SQL parser, HTTP/SigV4 S3 client,
# SHA-256/HMAC, CRC32C, PRNG, event loop — is implemented in this crate so
# that all memory is statically allocated at startup and the core stays
# deterministic for simulation testing.
[dependencies]
libc = "0.2"
# The single whitelisted exception to the libc-only policy (see AGENTS.md and
# PLAN.md Stage G): TLS is never hand-rolled. rustls runs isolated — every
# call from the S3 client enters through `mem::guard::tls_scope`, whose
# allocations are counted against a startup-configured budget and abort loudly
# past it, so the static-memory discipline holds everywhere else.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
# Compiled-in Mozilla root certificates (pure data, no code paths).
webpki-roots = "0.26"

[profile.release]
panic = "abort"
